@@ -14,6 +14,8 @@
     - setObjKey() function renamed to setKey()
     - setObjVal() function renamed to setVal()
     - fixed nexl expressions deep resolution bug ( affects to iterations )
+    - fixed bug in ^S action. Expression deep resolution was missed
+    - fixed bug in !U action for arrays. Undefined value was eliminated instead just be undefined
 
 2.2.1 | 26-MAY-2017
 ===================
